# ai-novel

./: .dockerignore  .env.example  .gitignore  Makefile  ONBOARDING.md  README.md  docker-compose.monitoring.yml  docker-compose.yml  install.sh  优化方向.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_project_fields_cascade.py  0003_organization_invitations.py  0004_system_settings.py  0005_plot_threads.py  0006_novel_specs_unique.py  0007_novel_specs_continuity_rules.py  0008_rename_scene_write_job_type.py  0009_export_file_content.py  0010_generation_jobs_dedupe_key.py  0011_database_indexes.py  0012_draft_versions_content_format.py  0012_memory_recall_indexes.py  0013_revision_copilot.py  0014_character_revisions.py  0014_world_plot_revisions.py  0015_world_plot_revisions.py  0016_memory_embedding_hnsw.py  0017_memory_levels.py  0018_model_calls_metadata.py  0019_information_ledger.py  0020_scene_pov.py  0021_style_samples.py  0023_prompt_experiments.py  (+17 more)
backend/app/: contracts.py  main.py
backend/tests/: conftest.py  fakes.py  postgres_fixtures.py  test_admin_orgs_users.py  test_admin_plans.py  test_admin_settings.py  test_audit_rewrite_flow.py  test_auditor_anti_forgetting.py  test_auth.py  test_batch_runner.py  test_bible_editing.py  test_chapter_arc.py  test_chapters_api.py  test_character_revisions.py  test_compare_experiment.py  test_context_world_plot_actions.py  test_contract_consistency.py  test_dedupe_flow.py  test_embedding.py  test_evals_baseline.py  test_export_flow.py  test_full_novel_flow.py  test_generate_bible_flow.py  test_generate_outline_flow.py  test_generate_scene_plan_flow.py  test_healthz.py  test_hierarchical_memory.py  test_information_ledger.py  test_markdown_stripper.py  test_model_gateway_providers.py  test_model_gateway_test_endpoint.py  test_moderation.py  test_multi_agent_writer.py  test_openai_stream_provider.py  test_organizations.py  test_outline_force_regenerate.py  test_plot_thread_revisions.py  test_preflight_direction.py  test_projects.py  test_prompt_router.py  (+20 more)
(+413 files in other folders)
