[project]
name = "ai-novel-backend"
version = "0.1.0"
description = "NovelFlow AI SaaS backend architecture skeleton"
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pgvector>=0.3.6",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "redis>=5.0.8",
  "sqlalchemy[asyncio]>=2.0.32",
  "temporalio>=1.7.0",
  "uvicorn[standard]>=0.30.6",
  "eval-type-backport>=0.2.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.2"
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
