[project]
name = "ai-novel-backend"
version = "0.1.0"
description = "NovelFlow AI SaaS backend"
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "bcrypt>=4.0.1,<4.1.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "passlib[bcrypt]>=1.7.4",
  "pgvector>=0.3.6",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "redis>=5.0.8",
  "slowapi>=0.1.9",
  "sqlalchemy[asyncio]>=2.0.32",
  "structlog>=24.4.0",
  "temporalio>=1.7.0",
  "uvicorn[standard]>=0.30.6",
  "eval-type-backport>=0.2.2",
  "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.2",
  "testcontainers[postgres]>=4.7.2"
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP045"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "postgres: 需要 Docker 与 testcontainers 启动真 Postgres 的集成测试",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
